[tool.poetry]
name = "vending-machine-sales"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <joaooliveira247@gmail.com>"]
readme = "README.md"
packages = [{include = "vending_machine_sales"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
